<resources>
    <string name="app_name">Farmspot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_add">Add</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>

    <string name="main_prod">Main products</string>

    <string name="hello">Hello!</string>
    <string name="username">User</string>
    <string name="emailregister">Email</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="login">Log In</string>
    <string name="loginHelp">Don\'t have an account? Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="signupHelp">Already have an account? Log In</string>

    <string name="list_text">Element</string>

    <string name="auth_failed">Authentication failed: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- SUPPORT PAGE -->
    <string name="title_contact_us">Contact Us</string>
    <string name="email"> <b>Email:</b> farmsport@gmail.com</string>
    <string name="phone"> <b>Phone:</b> 655837464</string>
    <string name="instagram"> <b>Instagram: </b> farmspot</string>
    <string name="twitter"> <b>Twitter: </b> farmspotX</string>
    <string name="address"> <b>Address:</b> Leganés, Madrid</string>
    <!-- ADD PRODUCT  -->
    <string name="add_product_button">Add Product</string>
    <string name="TitleProduct">Title</string>
    <string name="DescriptionProduct">Description</string>
    <string name="CategoryProduct">Category</string>
    <string name="PricePerUnit">Price per Unit in Euros</string>
    <string name="UnitProduct">Units</string>
    <string name="Quantity">Quantity</string>
    <string name="locationEditText">Location</string>
    <string name="UploadImage">Upload Image</string>
    <string name="additional_specification">Add any additional specification</string>
    <!-- BUY PRODUCT -->
    <string name="defaultaddress">Your default address</string>
    <string name="specifyaddress">Specify an address</string>
    <string name="buyproduct">Buy Product</string>

    <!-- PROFILE -->
    <string name="transactions">Transactions</string>
    <string name="purchases">Purchases</string>
    <string name="sales">Sales</string>
    <string name="Account">Account</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="customer_support">Customer Support</string>
    <string name="help">Help</string>
    <string name="title_activity_auth_listener">AuthListener</string>
    <string name="no_display">Nothing to display!</string>
    <string name="purchases_prod">Your purchases</string>

    <string name="cannot_buy_product">You cannot buy this product</string>

</resources>
