<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_contact_us"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily= "@font/nunito_extrabolditalic"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instagram"
        android:textSize="17sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textViewPhone"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        android:textSize="17sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textViewInstagram"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewAdress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="17sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTwitter"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
