<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo_black_farmspot" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/custom_eddittext"
            android:baselineAligned="false"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="12dp">


                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/nunito_black"/>

                <EditText
                    android:id="@+id/registerUser"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_eddittext"
                    android:hint="@string/username"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_eddittext"
                    android:hint="@string/password"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/registerRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_eddittext"
                    android:hint="@string/repeatPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito_regular"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/green_main"
                    android:text="@string/signup"
                    android:textSize="16dp"
                    app:cornerRadius="30dp"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/signupHelp"
            android:textSize="16dp"
            android:textAlignment="center"
            android:id="@+id/signupTextView"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>