<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_sample"/>

    <LinearLayout
        android:id="@+id/profileLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/userImage">

        <TextView
            android:id="@+id/usernameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/nunito_black"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/customer_support"
            android:textColor="@color/green_main"
            android:textSize="18sp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/profileHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="start"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/help"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/transactions"
            android:textColor="@color/green_main"
            android:textSize="18sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="start"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/transactions"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="start"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/sales"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="start"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/Account"
            android:textColor="@color/green_main"
            android:textSize="18sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="start"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/Settings"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:gravity="start"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/Logout"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>



</androidx.constraintlayout.widget.ConstraintLayout>