<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <!-- Back icon -->
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/backicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Location"
        app:layout_constraintTop_toTopOf="@+id/imageViewProduct"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:maxHeight="200dp"
        android:src="@drawable/add_picture_product"
        app:layout_constraintTop_toBottomOf="@+id/backIcon"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upload Image"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProduct"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/titleCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUploadImage">

        <EditText
            android:id="@+id/titleAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/TitleProduct"
            android:textColor="@android:color/black"
            android:background="@drawable/custom_eddittext"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/descriptionCardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/categoryCardView"
        app:layout_constraintTop_toBottomOf="@+id/titleCardView">

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/categoryCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/priceUnitLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/categoryEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:hint= "@string/CategoryProduct"
            android:background="@drawable/custom_eddittext"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/priceUnitLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="@id/descriptionCardView"
        app:layout_constraintBottom_toTopOf="@+id/AddProduct">

        <androidx.cardview.widget.CardView
            android:id="@+id/priceCardView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:background="@drawable/custom_eddittext"
                android:textSize="16sp"
                android:hint= "@string/PricePerUnit"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/unitCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/unitEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:hint= "@string/UnitProduct"
                android:textColor="@android:color/black"
                android:background="@drawable/custom_eddittext"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/AddProduct"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:text="@string/add_product_button"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/green_main"
        android:textSize="16dp"
        app:cornerRadius="30dp"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_eddittext"
        android:hint="@string/DescriptionProduct"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
